Library statistic can read jelib
git-svn-id: https://svn.java.net/svn/electric~svn/trunk@7214 b64ed6c1-75a8-e629-b1da-d0dae74a743a